--- a/AdventOfCode19.cabal
+++ b/AdventOfCode19.cabal
@@ -28,6 +28,14 @@ source-repository head
 library
   exposed-modules:
       IntComp
+      Day1
+      Day2
+      Day3
+      Day4
+      Day5
+      Day6
+      Day7
+      Day8
       Day9
   other-modules:
       Paths_AdventOfCode19
